@@ -1,3 +1,4 @@
+01-Jul-2009	weaver  config - added view only option to configdb_gui
 22-Jun-2009	weaver  config - fixed early delete of ParameterSet objects.
 01-Jun-2009	weaver	Added test/control as a model for run control sequencer.
 16-Apr-2009	weaver	Fixed some bugs in configdb_gui (always generated new keys).
